# smash-contigs

./: CMakeLists.txt  Makefile.nix  README.md  common.c  common.h  defs.h  hash.c  hash.h  msg.c  msg.h  paint.c  paint.h  param.h  parser.c  parser.h  pos.c  pos.h  rmodel.c  rmodel.h  run-smash.sh  seq.c  smash-contigs.c  smash-reduce.c  smash-visual.c
imgs/: logo.eps
src/: CMakeLists.txt  Makefile  Makefile.linux  lines.c  lines.h  msg.c  paint.c  param.h  run-smash.sh  smash-reduce.c  smash-visual.c  tmp.c  tmp_rmode.c
